force-app/main/default/objects/pfc_Tax_Rate__c/pfc_Tax_Rate__c.object-meta.xml
<CustomObject>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>TAX-{0000000000}</displayFormat>
        <label>Tax_Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>