force-app/main/default/objects/pfc_Tax_Rate__c/fields/Ending_Range__c.field-meta.xml
<CustomField>
    <fullName>Ending_Range__c</fullName>
    <description>Ending Range of a tax bracket</description>
    <label>Ending Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>