force-app/main/default/objects/pfc_Tax_Rate__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fiscal Year</label>
    <referenceTo>pfc_Fiscal_Year__c</referenceTo>
    <relationshipLabel>Tax Rate</relationshipLabel>
    <relationshipName>Tax_Rate</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>