force-app/main/default/objects/pfc_Tax_Rate__c/fields/Starting_Range__c.field-meta.xml
<CustomField>
    <fullName>Starting_Range__c</fullName>
    <description>Starting range</description>
    <label>Starting Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>