force-app/main/default/objects/pfc_Tax_Rate__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <description>Type of Tax (Federal/State)</description>
    <inlineHelpText>Type of Tax (Federal/State)</inlineHelpText>
    <label>Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>