force-app/main/default/objects/pfc_Tax_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Tax_Type__c</columns>
    <columns>Starting_Range__c</columns>
    <columns>Ending_Range__c</columns>
    <columns>Tax_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>